tests/paczka1/small_fuzzy/24466445.err
Error in line 6: QHMi S212 81,04
Error in line 7: S212 S212 7,46
Error in line 11: Z0QRc A246 6,0
